[workspace]
members = ["rmesh-test",
    "rmesh",
    "rmesh-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["rmesh Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rmesh"

[workspace.dependencies]
# Core dependencies
meshtastic = { git = "https://github.com/meshtastic/rust.git", branch = "main", features = ["serde"] }
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
log = "0.4"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env", "cargo", "color"] }
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"

# Utilities
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
strum = { version = "0.26", features = ["derive"] }
