[package]
name = "meshtastic-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A comprehensive command-line interface for Meshtastic devices"
keywords = ["meshtastic", "mesh", "lora", "cli", "radio"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "meshtastic-cli"
path = "src/main.rs"

[dependencies]
# Core library
meshtastic-cli-core = { path = "../meshtastic-cli-core" }

# Async runtime
tokio.workspace = true
anyhow.workspace = true

# CLI
clap.workspace = true

# Output formatting
colored.workspace = true
indicatif.workspace = true
comfy-table.workspace = true
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
chrono.workspace = true

[features]
default = []
bluetooth = ["meshtastic-cli-core/bluetooth"]