[package]
name = "rmesh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for rmesh - Rust Meshtastic CLI"
keywords = ["meshtastic", "mesh", "lora", "radio", "library"]
categories = ["network-programming", "encoding"]

[dependencies]
# Core dependencies
meshtastic.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
log.workspace = true

# Utilities
chrono.workspace = true
hex.workspace = true
rand = "0.8"
strum.workspace = true

[features]
default = []
bluetooth = ["meshtastic/bluetooth-le"]